# duet

./: .gitignore  .merlin  .travis.yml  API.odocl  AUTHORS.txt  INSTALL.txt  LICENSE  META  Makefile  README.md  README.txt  _oasis  _tags  abstract.ml  abstract.mli  apak.opam  arkApron.ml  arkApron.mli  arkAst.ml  arkParse.mly  arkPervasives.ml  arkSimplify.ml  arkSimplify.mli  arkTop.ml  arkUtil.ml  arkZ3.ml  bigO.ml  build.sh  build_apak.sh  build_ark.sh  build_plugin.sh  chctest.smt2  configure  configure.ac  coordinateSystem.ml  cube.ml  cube.mli  duet.opam  dune  dune-project  (+70 more)
apak/: META  Makefile  apakEnum.ml  apakEnum.mli  disjointSet.ml  dll.ml  dune  enumeration.ml  evalLink.ml  extGraph.ml  extGraph.mli  fixpoint.ml  fixpoint.mli  index.html  ka.ml  lattice.ml  lattice.mli  log.ml  loop.ml  loop.mli  memo.mli  monoid.ml  monoid.mli  pathexp.ml  pathexp.mli  persistent.ml  putil.ml  putil.mli  recGraph.ml  regex.ml  semilattice.ml  semilattice.mli  sese.ml  sese.mli  sig.ml  tagged.ml  test_apak.ml  test_memo.ml  test_pathexp.ml  test_recgraph.ml  (+4 more)
apak/Apak/: index.html
apak/Apak/Enumeration/: index.html
apak/Apak/EvalLink/: index.html
apak/Apak/ExtGraph/: index.html
apak/Apak/Lattice/: index.html
apak/Apak/Monoid/: index.html
apak/Apak/Putil/: index.html
apak/Apak/RecGraph/: index.html
apak/Apak/Semilattice/: index.html
apak/Apak/Sig/: index.html
apak/Apak__Enumeration/: index.html
apak/Apak__EvalLink/: index.html
apak/Apak__ExtGraph/: index.html
apak/Apak__Lattice/: index.html
apak/Apak__Monoid/: index.html
apak/Apak__Putil/: index.html
apak/Apak__RecGraph/: index.html
apak/Apak__Semilattice/: index.html
apak/Apak__Sig/: index.html
apak/Apak__WeakDynArray/: index.html
apak/src/: dll.ml  dll.mli  extGraph.ml  extGraph.mli  fixpoint.ml  fixpoint.mli  ka.ml  lattice.ml  log.ml  loop.ml  loop.mli  memo.ml  monoid.ml  pathexp.ml  pathexp.mli  putil.ml  putil.mli  recGraph.ml  recGraph.mli  regex.ml  semilattice.ml  sese.ml  sese.mli  tagged.ml  tagged.mli  test_pathexp.ml  test_recgraph.ml  test_regex.ml  test_sese.ml
duet/: InterIR.ml  Makefile  Makefile.config.in  afg.ml  afg.mli  ai.ml  aliasLogic.ml  ast.ml  ast.mli  bddpa.ml  call.ml  categorize.ml  cbpAst.ml  cbpLex.mll  cbpParse.mly  cfgIr.ml  cfgIr.mli  cmdLine.ml  concDep.ml  config.ml.in  configure.ac  conversion.ml  core.ml  core.mli  cra.ml  datalog.ml  dependence.ml  dg.ml  dominator.ml  duet.ml  duetForLibrary.ml  dune  enumeration.ml  eqLogic.ml  evalLink.ml  exponential.ml  extGraph.ml  fspa.ml  gen_flags.sh  hlir.ml  (+35 more)
duet/goto/: Makefile  goto.ml  goto.mli  goto_stubs.cpp
duet/regression/: Makefile  regression.ml  regression.sh  regression.txt
duet/src/: InterIR.ml  Makefile  afg.ml  afg.mli  ai.ml  aliasLogic.ml  assumeassertparser.ml  ast.ml  ast.mli  bddpa.ml  buildassumeassertparser.sh  call.ml  cbpAst.ml  cbpLex.mll  cbpParse.mly  cfgIr.ml  cfgIr.mli  cmdLine.ml  concDep.ml  config.ml.in  conversion.ml  core.ml  core.mli  cra.ml  datalog.ml  dependence.ml  dg.ml  diff.ml  dominator.ml  duet.ml  duet_plugin.ml  eqLogic.ml  exponential.ml  fspa.ml  havocPropagation.ml  induction.ml  inferFrames.ml  inline.ml  interproc.ml  ipa.ml  (+23 more)
srk/: Makefile  README.md  _oasis  _tags  arkUtil.ml  dune-project  featureTree.ml  index.html  srk.opam  test_quantifier.ml
srk/Srk/: index.html
srk/Srk__Abstract/: index.html
srk/Srk__BigO/: index.html
srk/Srk__CoordinateSystem/: index.html
srk/Srk__DisjointSet/: index.html
srk/Srk__ExpPolynomial/: index.html
srk/Srk__FeatureTree/: index.html
srk/Srk__Fixpoint/: index.html
srk/Srk__Interpretation/: index.html
srk/Srk__Interval/: index.html
srk/Srk__Iteration/: index.html
srk/Srk__Linear/: index.html
srk/Srk__Log/: index.html
srk/Srk__Loop/: index.html
srk/Srk__Lts/: index.html
srk/Srk__Memo/: index.html
srk/Srk__Nonlinear/: index.html
srk/Srk__Pathexpr/: index.html
srk/Srk__Polyhedron/: index.html
srk/Srk__Polynomial/: index.html
srk/Srk__QQ/: index.html
srk/Srk__Quantifier/: index.html
srk/Srk__RandomFormula/: index.html
srk/Srk__Ring/: index.html
srk/Srk__Smt/: index.html
srk/Srk__SolvablePolynomial/: index.html
srk/Srk__SrkApron/: index.html
srk/Srk__SrkAst/: index.html
srk/Srk__SrkLex/: index.html
srk/Srk__SrkParse/: index.html
srk/Srk__SrkSimplify/: index.html
srk/Srk__SrkUtil/: index.html
srk/Srk__SrkZ3/: index.html
srk/Srk__Syntax/: index.html
srk/Srk__Transition/: index.html
srk/Srk__TransitionFormula/: index.html
srk/Srk__TransitionSystem/: index.html
srk/Srk__Vas/: index.html
srk/Srk__Vass/: index.html
srk/Srk__Wedge/: index.html
srk/Srk__WeightedGraph/: index.html
srk/Srk__ZZ/: index.html
srk/mprs/: mprs.ml  mprs.mli  run_tests.ml
srk/src/: META  abstract.ml  abstract.mli  abstractLia.ml  abstractLia.mli  acexp.ml  acexp.mli  algebra.ml  almostCommuting.ml  almostCommuting.mli  arkLex.mll  arkParse.mly  arkZ3.ml  arraycontent.ml  arraycontent.mli  bigO.ml  bigO.mli  bigtop.ml  cache.ml  cache.mli  chc.ml  chc.mli  compressedWeightedForest.ml  compressedWeightedForest.mli  cone.ml  cone.mli  coordinateSystem.ml  coordinateSystem.mli  dD.ml  dD.mli  disjointSet.ml  dune  expPolynomial.ml  expPolynomial.mli  featureTree.ml  fixpoint.ml  hoare.ml  hoare.mli  intLattice.ml  intLattice.mli  (+119 more)
srk/test/: dune  test_AlmostCommuting.ml  test_LinearSemiautomaton.ml  test_WeightedGraph.ml  test_abstract.ml  test_apron.ml  test_arraycontent.ml  test_chc.ml  test_cone.ml  test_exppolynomial.ml  test_fgb.ml  test_fixpoint.ml  test_intLattice.ml  test_interval.ml  test_iteration.ml  test_linear.ml  test_lts.ml  test_memo.ml  test_multiplicative.ml  test_nestedLoops.ml  test_numberField.ml  test_order.ml  test_pervasives.ml  test_polyhedron.ml  test_polynomial.ml  test_polynomialCone.ml  test_polynomialConeCpClosure.ml  test_polynomialLattice.ml  test_quantifier.ml  test_rational.ml  test_ring.ml  test_scalar.ml  test_sequence.ml  test_simplify.ml  test_smt.ml  test_srk.ml  test_srk_poly.ml  test_syntax.ml  test_termination.ml  test_transition.ml  (+3 more)
(+5608 files in other folders)
