opam-version: "2.0"
version: "~dev"
synopsis: "Duet program analyzer"
maintainer: "Zachary Kincaid <zkincaid@gmail.com>"
authors: "Zachary Kincaid <zkincaid@gmail.com>"
license: "MIT"
homepage: "https://github.com/zkincaid/duet"
bug-reports: "https://github.com/zkincaid/duet/issues"
depends: [
  "ocamlfind" {build}
  "dune" {build}
  "ocamlgraph"
  "batteries"
  "ppx_deriving"
  "z3"
  "apron"
  "menhir"
  "cil"
  "OCRS"
  "ntl"
  "ounit" {with-test}
]
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]
dev-repo: "git+https://github.com/zkincaid/duet"
url {
  src: "git+https://github.com/zkincaid/duet"
}
