(lang dune 2.0)
(name srk)
(using menhir 2.0)
(generate_opam_files true)

(package
  (name srk)
  (synopsis "Symbolic Reasoning Kit")
  (description "A library for automated symbolic reasoning.")
  (depends
    batteries
    ppx_deriving
    gmp
    camlidl
    apron
    zarith
    z3
    ntl
    ocamlgraph
    normalizffi
    faugere
    arbduet
    ))