(rule
  (target link_flags.sexp)
  (action (write-file link_flags.sexp "(-cclib -Wl,-keep_dwarf_unwind)"))
  (enabled_if (= %{ocaml-config:system} macosx)))

(rule
  (target link_flags.sexp)
  (action (write-file link_flags.sexp "()"))
  (enabled_if (<> %{ocaml-config:system} macosx)))

(tests
  (names test_srk test_srk_poly)
  (modes native)
  (link_flags (:standard) (:include link_flags.sexp))
  (libraries srk oUnit apron apron.boxMPQ apron.octMPQ apron.polkaMPQ)
  (preprocess (pps ppx_deriving.ord ppx_deriving.eq ppx_deriving.show)))
